--- a/app/src/main/res/layout/activity_select_photo_task.xml
+++ b/app/src/main/res/layout/activity_select_photo_task.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/selectPhoto"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
@@ -22,9 +22,9 @@
         android:id="@+id/correctImageName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selectPhoto" />
 
