--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#8BC34A"
-    tools:context=".LanguageSelection">
+    tools:context=".views.LanguageSelection">
 
     <ImageView
         android:id="@+id/imageView3"
