se agrega cambio de color en botones y cambio de alpha en imagenes, se agregan custom_fields a el registro

--- a/app/src/main/res/layout/activity_final_score.xml
+++ b/app/src/main/res/layout/activity_final_score.xml
@@ -56,7 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/back_to_main"
-        app:backgroundTint="#4CAF50"
+        android:textColor="@drawable/button_text_color"
+        android:backgroundTint="@color/button_background_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
