--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/back"
-        android:textColor="#8BC34A"
+        android:textColor="@drawable/button_text_color"
         android:textSize="18sp"
         app:iconTint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,13 +56,13 @@
 
     <Button
         android:id="@+id/animals"
-        style="@style/Widget.AppCompat.Button"
         android:layout_width="140dp"
         android:layout_height="43dp"
         android:layout_marginTop="12dp"
         android:text="@string/animals"
         android:textSize="16sp"
-        app:backgroundTint="#4CAF50"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/button_background_color"
         app:layout_constraintEnd_toStartOf="@+id/food"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,13 +81,13 @@
 
     <Button
         android:id="@+id/food"
-        style="@style/Widget.AppCompat.Button"
         android:layout_width="140dp"
         android:layout_height="43dp"
         android:layout_marginTop="12dp"
         android:text="@string/food"
         android:textSize="16sp"
-        app:backgroundTint="#4CAF50"
+        android:textColor="@drawable/button_text_color"
+        android:backgroundTint="@color/button_background_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/animals"
@@ -95,13 +95,13 @@
 
     <Button
         android:id="@+id/verbs"
-        style="@style/Widget.AppCompat.Button"
         android:layout_width="140dp"
         android:layout_height="43dp"
         android:layout_marginTop="12dp"
         android:text="@string/verbs"
         android:textSize="16sp"
-        app:backgroundTint="#4CAF50"
+        android:textColor="@drawable/button_text_color"
+        android:backgroundTint="@color/button_background_color"
         app:layout_constraintEnd_toStartOf="@+id/synonymsButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,13 +109,13 @@
 
     <Button
         android:id="@+id/synonymsButton"
-        style="@style/Widget.AppCompat.Button"
         android:layout_width="140dp"
         android:layout_height="43dp"
         android:layout_marginTop="12dp"
         android:text="@string/synonyms"
         android:textSize="16sp"
-        app:backgroundTint="#4CAF50"
+        android:textColor="@drawable/button_text_color"
+        android:backgroundTint="@color/button_background_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/verbs"
