--- a/app/src/main/res/layout/activity_select_photo_task.xml
+++ b/app/src/main/res/layout/activity_select_photo_task.xml
@@ -34,6 +34,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:clickable="true"
         app:layout_constraintEnd_toStartOf="@+id/option2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +48,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/option1"
@@ -59,6 +61,7 @@
         android:layout_height="150dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:clickable="true"
         app:layout_constraintEnd_toStartOf="@+id/option4"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +75,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/option3"
