pantalla de login y registro modificadas

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="darker_gray">#424242</color>
     <color name="gray">#BDBDBD</color>
     <color name="funSpeakGreen">#4CAF50</color>
+    <color name="baige">#E1CF70</color>
 
 </resources>
