--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#8BC34A"
+    android:background="@color/baige"
+    android:paddingStart="12dp"
     tools:context=".views.register.RegisterActivity">
 
     <ImageView
@@ -22,16 +23,18 @@
     <EditText
         android:id="@+id/ediTextEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/border_edittext"
         android:ems="10"
         android:hint="@string/email_hint"
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
         android:text=""
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoView" />
@@ -39,16 +42,18 @@
     <EditText
         android:id="@+id/editTextPass"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/border_edittext"
         android:ems="10"
-        android:inputType="textPassword"
-        android:text=""
         android:hint="@string/pass_hint"
+        android:inputType="textPassword"
+        android:paddingStart="12dp"
+        android:text=""
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ediTextEmail" />
@@ -56,15 +61,17 @@
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/border_edittext"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/name_hint"
+        android:inputType="textPersonName"
+        android:paddingStart="12dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPass" />
@@ -72,15 +79,17 @@
     <EditText
         android:id="@+id/editTextNickName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/border_edittext"
         android:ems="10"
         android:hint="@string/nickname_hint"
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,15 +98,17 @@
     <EditText
         android:id="@+id/editTextAddress"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/border_edittext"
         android:ems="10"
         android:hint="@string/address_hint"
         android:inputType="textPersonName"
+        android:paddingStart="12dp"
         android:textColor="@color/white"
-        android:textColorHint="@color/white"
+        android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -117,16 +128,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
 
-    <Button
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <Button xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/btnCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="100dp"
-        android:text="@string/btnCancel"
         android:onClick="btnCancelAction"
+        android:text="@string/btnCancel"
         app:backgroundTint="#4CAF50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,7 +153,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
