--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/baige"
+    android:background="@drawable/fondo"
     tools:context=".views.login.LoginActivity">
 
     <ImageView
@@ -53,7 +53,7 @@
         android:hint="@string/pass_hint"
         android:inputType="textPassword"
         android:paddingStart="12dp"
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
