--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/baige"
+    android:background="@drawable/fondo"
     android:paddingStart="12dp"
     tools:context=".views.register.RegisterActivity">
 
@@ -33,7 +33,7 @@
         android:inputType="textPersonName"
         android:paddingStart="12dp"
         android:text=""
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:inputType="textPassword"
         android:paddingStart="12dp"
         android:text=""
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:hint="@string/name_hint"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
         android:hint="@string/nickname_hint"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -107,7 +107,7 @@
         android:hint="@string/address_hint"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
-        android:textColor="@color/white"
+        android:textColor="@color/gray"
         android:textColorHint="@color/gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
