--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#8BC34A"
+    android:background="@drawable/fondo_2"
     tools:context=".views.LanguageSelection">
 
     <ImageView
@@ -13,6 +13,17 @@
         android:layout_height="238dp"
         android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="62dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
@@ -48,6 +59,10 @@
         android:layout_width="252dp"
         android:layout_height="44dp"
         android:layout_marginTop="460dp"
+        android:background="@color/gray"
+        android:foregroundTint="#FFFFFF"
+        android:spinnerMode="dialog"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -57,10 +72,10 @@
         android:layout_width="183dp"
         android:layout_height="55dp"
         android:layout_marginTop="544dp"
-        android:text="@string/start"
-        android:textSize="18sp"
-        android:textColor="@drawable/button_text_color"
         android:backgroundTint="@color/button_background_color"
+        android:text="@string/start"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
