--- a/app/src/main/res/layout/activity_final_score.xml
+++ b/app/src/main/res/layout/activity_final_score.xml
@@ -55,9 +55,10 @@
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/spotify"
         android:text="@string/back_to_main"
         android:textColor="@drawable/button_text_color"
-        android:backgroundTint="@color/button_background_color"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
