--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,10 +48,11 @@
         android:layout_width="140dp"
         android:layout_height="43dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/button_background_color"
+        android:backgroundTint="@color/spotify"
         android:text="@string/food"
         android:textColor="@drawable/button_text_color"
         android:textSize="16sp"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/animals"
@@ -62,10 +63,11 @@
         android:layout_width="140dp"
         android:layout_height="43dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@color/button_background_color"
+        android:backgroundTint="@color/spotify"
         android:text="@string/animals"
         android:textColor="@color/white"
         android:textSize="16sp"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toStartOf="@+id/food"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,10 +89,11 @@
         android:layout_width="140dp"
         android:layout_height="43dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/button_background_color"
+        android:backgroundTint="@color/spotify"
         android:text="@string/synonyms"
         android:textColor="@drawable/button_text_color"
         android:textSize="16sp"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/verbs"
@@ -123,10 +126,11 @@
         android:layout_width="140dp"
         android:layout_height="43dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/button_background_color"
+        android:backgroundTint="@color/spotify"
         android:text="@string/verbs"
         android:textColor="@drawable/button_text_color"
         android:textSize="16sp"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toStartOf="@+id/synonymsButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
