--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="gray">#BDBDBD</color>
     <color name="funSpeakGreen">#4CAF50</color>
     <color name="baige">#E1CF70</color>
-
+    <color name="spotify">#1db954</color>
 </resources>
