--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -72,10 +72,11 @@
         android:layout_width="183dp"
         android:layout_height="55dp"
         android:layout_marginTop="544dp"
-        android:backgroundTint="@color/button_background_color"
+        android:backgroundTint="@color/spotify"
         android:text="@string/start"
         android:textColor="@drawable/button_text_color"
         android:textSize="18sp"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
