--- a/app/src/main/res/layout/activity_select_difficulty.xml
+++ b/app/src/main/res/layout/activity_select_difficulty.xml
@@ -21,9 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:backgroundTint="@color/spotify"
         android:text="@string/easy"
         android:textColor="@drawable/button_text_color"
-        android:backgroundTint="@color/button_background_color"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -33,9 +34,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:backgroundTint="@color/spotify"
         android:text="@string/normal"
         android:textColor="@drawable/button_text_color"
-        android:backgroundTint="@color/button_background_color"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/easy" />
@@ -45,9 +47,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:backgroundTint="@color/spotify"
         android:text="@string/hard"
         android:textColor="@drawable/button_text_color"
-        android:backgroundTint="@color/button_background_color"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/normal" />
