--- a/app/src/main/res/layout/activity_complete_phrase_task.xml
+++ b/app/src/main/res/layout/activity_complete_phrase_task.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#2271B3"
     tools:context=".views.tasks.CompletePhraseTask">
 
     <TextView
@@ -12,6 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/complete_phrase"
+        android:textColor="@color/white"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,6 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/completePhrase" />
 
@@ -33,6 +38,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/spotify"
         android:textColor="@drawable/button_text_color"
+        android:textSize="20sp"
         app:cornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phrase" />
@@ -45,6 +51,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/spotify"
         android:textColor="@drawable/button_text_color"
+        android:textSize="20sp"
         app:cornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phraseOption1" />
@@ -57,6 +64,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/spotify"
         android:textColor="@drawable/button_text_color"
+        android:textSize="20sp"
         app:cornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phraseOption2" />
@@ -69,6 +77,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/spotify"
         android:textColor="@drawable/button_text_color"
+        android:textSize="20sp"
         app:cornerRadius="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phraseOption3" />
@@ -82,6 +91,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phraseOption4" />
 
@@ -90,6 +100,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,6 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="/"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/phraseNu2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/phraseNu1"
@@ -111,6 +124,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView4"
